@@ -853,6 +853,10 @@
         name = "Joshua Hudson"
     [/entry]
     [entry]
+	name = "Karl Miller (karlm)"
+        email = "karl dot miller dot km at gmail dot com"
+    [/entry]
+    [entry]
         name = "Laurent Birtz"
     [/entry]
     [entry]
