@@ -181,6 +181,9 @@ The side-specific multiplayer options are marked with
 has to be replaced by a side number. It usually is 1 or 2 but depends on
 the number of players possible in the chosen scenario.
 .TP
+.BI --ai_config number = value
+selects a configuration file to load for the AI controller for this side.
+.TP
 .BI --algorithm number = value
 selects a non-standard algorithm to be used by the AI controller for
 this side. Available values:
